--- a/prologin/news/templates/zinnia/entry_detail_base.html
+++ b/prologin/news/templates/zinnia/entry_detail_base.html
@@ -106,7 +106,7 @@
   {% block pingbacks-loop %}
   <ol id="pingback-list">
     {% for pingback in pingback_list %}
-    <li id="pingback-{{ pingback.pk }}" class="pingback vcard {% cycle box1,box2 %}">
+    <li id="pingback-{{ pingback.pk }}" class="pingback vcard {% cycle 'box1' 'box2' %}">
       {% block pingback-info %}
       <p class="pingback-info">
         <a href="{{ pingback.url }}" rel="external nofollow"
@@ -150,7 +150,7 @@
   {% block trackbacks-loop %}
   <ol id="trackback-list">
     {% for trackback in trackback_list %}
-    <li id="trackback-{{ trackback.pk }}" class="trackback vcard {% cycle box1,box2 %}">
+    <li id="trackback-{{ trackback.pk }}" class="trackback vcard {% cycle 'box1' 'box2' %}">
       {% block trackback-info %}
       <p class="trackback-info">
         <a href="{{ trackback.url }}" rel="external nofollow"
