--- a/prologin/qcm/templates/qcm/display.html
+++ b/prologin/qcm/templates/qcm/display.html
@@ -6,7 +6,7 @@
   {{ block.super }}
   {% breadcrumb_for "" %}{% trans "Contest" %}{% endbreadcrumb_for %}
   {% breadcrumb qcm.event.edition.year "" %}
-  {% breadcrumb_for "contest:qualification_summary" qcm.event.edition.year %}{% trans "Qualification" %}{% endbreadcrumb_for %} {# FIXME: always contest, no archive! #}
+  {% breadcrumb_for "contest:qualification-summary" qcm.event.edition.year %}{% trans "Qualification" %}{% endbreadcrumb_for %} {# FIXME: always contest, no archive! #}
   {% breadcrumb_for "qcm:display" qcm.event.edition.year %}{% trans "Quiz" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
@@ -41,9 +41,9 @@
         {% with question=field.field.question %}
           <li class="question" id="q{{ forloop.counter }}">
             <div class="body">
-              <div class="main">{{ question.body|markdown }}</div>
+              <div class="main">{{ question.body|markdown:0 }}</div>
               {% if question.verbose %}
-                <div class="verbose">{{ question.verbose|markdown }}</div>
+                <div class="verbose">{{ question.verbose|markdown:0 }}</div>
               {% endif %}
             </div>
             <ul class="propositions">
