--- a/prologin/contest/templates/contest/qualification-summary.html
+++ b/prologin/contest/templates/contest/qualification-summary.html
@@ -115,20 +115,31 @@
     {% csrf_token %}
 
     <div class="panel panel-default" id="details">
-      <div class="panel-heading">
-        {% trans "The school challenge" %}
-      </div>
+      <div class="panel-heading">{% trans "The inter-school challenge" %}</div>
       <div class="panel-body">
-        {# TODO: url #}
-        <p>{% blocktrans with url='#' %}Help your school go up in the <a href="{{ url }}">inter-school rankings</a>!
-If you are a student, fill in the name of your high school or university below. If your school does not appear in the
-list, you can add it by selecting the first item: “Add a new school”.
-{% endblocktrans %}</p>
         <div class="row">
           <div class="col-md-6">
-          {% bootstrap_field form.contestant.school layout='horizontal' %}
+            {{ form.contestant.school.label_tag }}
+            <p>{{ form.contestant.school }}</p>
+            <p class="text-muted small">{% trans "If your school does not appear in the list, type its full name and choose the first item: “Add a new school”." %}</p>
+            {# twitter #}
+            <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-text="{% trans "I participate in the #Prologin inter-school challenge!" %}" data-url="https://prologin.org" data-show-count="false">Tweet</a>
+            <script async defer charset="utf-8" src="//platform.twitter.com/widgets.js"></script>
+            {# facebook #}
+            <iframe src="https://www.facebook.com/plugins/share_button.php?quote=lol&href=https%3A%2F%2Fprologin.org%2F&layout=button&size=large&mobile_iframe=true&appId=665072473660328&width=88&height=28" width="88" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            {# g+ (lol) #}
+            <div class="g-plus" data-action="share" data-annotation="none" data-height="28" data-href="https://prologin.org/"></div>
+            <script async defer src="https://apis.google.com/js/platform.js"></script>
           </div>
           <div class="col-md-6">
+            <h4>{% trans "Help your school go up in the inter-school rankings!" %}</h4>
+            <p>{% blocktrans %}If you are a student, fill in the name of your high school or university.
+The points you score for solving this year problems will be accounted for your school total score.{% endblocktrans %}</p>
+            <div>
+              <a href="{% url 'contest:interschool:leaderboard' %}" class="btn btn-default">
+                <i class="fa fa-trophy"></i> {% trans "Rules & leaderboard" %}
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -141,6 +152,14 @@ list, you can add it by selecting the first item: “Add a new school”.
         {% trans "Preparing the next steps" %}
       </div>
       <div class="panel-body">
+        {% if issues %}
+        <div class="alert alert-danger">
+        {% for issue in issues %}
+          <p><i class="fa fa-times-circle"></i> {{ issue }}</p>
+        {% endfor %}
+        </div>
+        {% endif %}
+
         <div class="row">
           <div class="col-md-6">
             {% bootstrap_field form.user.first_name layout='horizontal' %}
