--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -24,7 +24,7 @@
     </ul>
         {% endcomment %}
     <h3>{% trans "Stay tuned!" %}</h3>
-    <a href="{% url 'zinnia:entry_latest_feed' %}" title="{% trans "Prologin news Atom stream" %}" class="social">
+    <a href="{% url 'zinnia:entry_feed' %}" title="{% trans "Prologin news Atom stream" %}" class="social">
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
