--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -23,6 +23,7 @@
   <div class="row">
 
   <div class="col-sm-3">
+    {% include "homepage/school-challenge-leaderboard.html" %}
     {% include "homepage/sponsors.html" %}
   </div>
 
