users: mail templates: fix whitespaces

--- a/prologin/users/templates/users/mails/activation.body.text.html
+++ b/prologin/users/templates/users/mails/activation.body.text.html
@@ -1,8 +1,7 @@
-{% load i18n %}
-{% load utils %}
+{% load i18n utils %}{% spaceless %}{% autoescape off %}
 
 {% get_setting 'PROLOGIN_CONTACT_MAIL' as contactmail %}
-{% spaceless %}{% autoescape off %}
+
 {% blocktrans with user.username as username %}
 Hi {{ username }}!
 
