locale: no more postal questionnaire

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -34,9 +34,8 @@ Prologin is a nonprofit organization, it is free to enter the contest.
     <div class="container presentation-body">
       <div class="row"><div class="col-sm-8">
       <h2>{% trans "1<sup>st</sup> step – Qualification" %}</h2>
-      <p>{% blocktrans %}The screening questionnaire allows to qualify for regional competitions.
+      <p>{% blocktrans %}The online screening questionnaire allows to qualify for regional competitions.
 It consists of a selection of algorithmic problems of increasing difficulty.
-It is possible to submit the questionnaire by postal mail or directly on this website.
 {% endblocktrans %}</p>
       <p>{% trans "Registration is entirely free, you only need an Internet access to submit your answers." %}</p></div>
       <div class="col-sm-4">
