--- a/prologin/users/templates/users/register.html
+++ b/prologin/users/templates/users/register.html
@@ -12,7 +12,7 @@
 {% block content %}
 <h1>{% trans "Register" %}</h1>
 
-<p>{% trans "Please choose a username. You must use a valid email address, as you will recieve a message to confirm your registration." %}</p>
+<p>{% trans "Please choose a username. You must use a valid email address, as you will receive a message to confirm your registration." %}</p>
 
 <form method="POST" class="form-horizontal" action="{% url 'users:register' %}?next={{ next }}">
   {% csrf_token %}
