about-qualification: rephrase sentence about sending posters

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -42,7 +42,7 @@ It is possible to submit the questionnaire by postal mail or directly on this we
       <div class="col-sm-4">
         <h4>{% trans "Who can qualify?" %}</h4>
         <p>{% trans "Any student under 21, living in Europe, who can understand and write French." %}</p>
-        <p>{% trans "Students from EPITA/EPITECH are not allowed to participate." %}</p>
+        <p>{% trans "Students from EPITA are not allowed to participate." %}</p>
         <p><a href="{% url 'pages:about-qualification' %}" class="btn btn-default">{% trans "Learn more" %}</a></p>
       </div>
     </div>
