--- a/prologin/problems/templates/problems/stub_submission_result.html
+++ b/prologin/problems/templates/problems/stub_submission_result.html
@@ -6,6 +6,15 @@
     <i class="fa fa-meh-o"></i> <strong>{% trans "Test skipped." %}</strong>
   {% else %}
 
+  <span class="pull-right">
+    {% if result.time %}
+      <span class="submission-metrics" title="{% trans "Run time" %}"><i class="fa fa-clock-o"></i> {{ result.time|floatformat:2 }}s</span>
+    {% endif %}
+    {% if result.memory %}
+      <span class="submission-metrics" title="{% trans "Memory" %}"><i class="fa fa-database"></i> {{ result.memory|filesizeformat }}</span>
+    {% endif %}
+  </span>
+
   {% if result.success %}
     <i class="fa fa-smile-o"></i> <strong>{% trans "Test passed!" %}</strong>
   {% else %}
@@ -24,13 +33,6 @@
         {% endif %}
       {% endif %}
     {% endif %}
-  {% endif %}
-
-  {% if result.time %}
-    <span class="submission-metrics" title="{% trans "Run time" %}"><i class="fa fa-clock-o"></i> {{ result.time|floatformat:2 }}s</span>
-  {% endif %}
-  {% if result.memory %}
-    <span class="submission-metrics" title="{% trans "Memory" %}"><i class="fa fa-database"></i> {{ result.memory|filesizeformat }}</span>
   {% endif %}
 
   {% endif %}
