--- a/prologin/problems/templates/problems/stub_submission_result.html
+++ b/prologin/problems/templates/problems/stub_submission_result.html
@@ -7,12 +7,12 @@
   {% else %}
 
   <span class="pull-right">
-    {% if result.time %}
+    {% if result.time != None %}
       <span class="submission-metrics"
             title="{% trans "Run time" %}:&#xA;{{ result.time|floatformat:2 }}s (user)&#xA;{{ result.time_wall|floatformat:2 }}s (wall)">
       <i class="fa fa-clock-o"></i> {{ result.time|floatformat:2 }}s</span>
     {% endif %}
-    {% if result.memory %}
+    {% if result.memory != None %}
       <span class="submission-metrics" title="{% trans "Memory" %}"><i class="fa fa-database"></i> {{ result.memory|filesizeformat }}</span>
     {% endif %}
   </span>
