mathjax: use stripped-down conf; fix weird :focus bug

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -509,6 +509,10 @@ li address {
   outline: none;
 }
 
+.MathJax:focus, body :focus .MathJax {
+  display: inline !important;
+}
+
 .task-list-item {
   list-style-type: none;
 }
