--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -105,7 +105,8 @@
                 {% has_perm 'forum.edit_post' request.user post as user_can_edit_post %}
                 {% has_perm 'forum.edit_post_visibility' request.user post as user_can_edit_post_visibility %}
                 {% has_perm 'forum.delete_post' request.user post as user_can_delete_post %}
-                {% if request.user.is_authenticated and user_can_post %}
+                {% has_perm 'forum.view_post' request.user post as user_can_view_post %}
+                {% if request.user.is_authenticated and user_can_post and user_can_view_post %}
                   <a href="{% url 'forum:cite-post' thread.slug post.pk %}" class="btn btn-default btn-xs btn-cite">
                     <i class="fa fa-quote-left"></i> {% trans "Cite" %}</a>
                 {% endif %}
