about: organization: fix typos

--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -79,7 +79,7 @@ often self-taught and have an individual practice of it. However, any large proj
 why, even though candidates seat the exam individually, the competition should facilitate the exchange of ideas
 between candidates. To promote these exchanges, the Prologin team tries to design the contest topics so they
 put forward playful aspects. Meanwhile, everything is done so that participants can and should exchange ideas
-within a cheerful atmoshpere. Combining work and pleasure is therefore a key objective of Prologin.</p>
+within a cheerful atmosphere. Combining work and pleasure is therefore a key objective of Prologin.</p>
 
 <p class="text-justify">We want to allow the candidates to take advantage of the competition to enhance their skills. We try to cover as
 many areas of computer science: artificial intelligence algorithms, general culture, various programming
@@ -101,7 +101,7 @@ the software architecture for the final, helping during the regional events, con
 We also appreciate your feedback and your suggestions.</p>
 
 <p class="text-justify">We also need your help with the training section, where users can try themselves on a large set of statements.
-If you can give us a hand, please do: we are looking for new statments (originals or translations of third parties),
+If you can give us a hand, please do: we are looking for new statements (originals or translations of third parties),
 courses, and corrections. Of course, please contact us before contributing so we can prevent certain parts
 being done in duplicate.</p>
 {% endblocktrans %}
