--- a/prologin/documents/templates/documents/custom-badges-input.html
+++ b/prologin/documents/templates/documents/custom-badges-input.html
@@ -21,8 +21,8 @@
   </h1>
   <form action="" method="post">
     {% csrf_token %}
-    {{ form|bootstrap_horizontal }}
-    <input type="submit" value="{% trans "Submit" %}" class="btn btn-default btn-s">
+    {{ form|bootstrap }}
+    <input type="submit" value="{% trans "Submit" %}" class="btn btn-primary">
   </form>
 {% endblock %}
       
